<?xml version="1.0"?>
<package format="2">
  <name>tdf_gazebo</name>
  <version>0.5.3</version>
  <description>the drone face gazebo simulation</description>
  <maintainer email="rsanchezm98@gmail.com">Rodrigo Sanchez</maintainer>

  <license>BSD</license>


  <author email="rsanchezm98@gmail.com">Rodrigo Sanchez</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>gazebo_ros</exec_depend>


<export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
</export>

</package>